[gd_scene load_steps=2 format=3 uid="uid://duvrwlngmodgp"]

[ext_resource type="Script" path="res://scripts/audio/audioPlayer.gd" id="1_ayfqj"]

[node name="AudioPlayer" type="Node"]
script = ExtResource("1_ayfqj")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Music"

[node name="SFXPlayer1" type="AudioStreamPlayer2D" parent="."]

[node name="SFXPlayer2" type="AudioStreamPlayer2D" parent="."]

[node name="SFXPlayer3" type="AudioStreamPlayer2D" parent="."]
